@@ -1,4 +1,8 @@
-$Id: CHANGES,v 1.80 2009/01/21 20:17:36 psavola Exp $
+$Id: CHANGES,v 1.81 2009/06/19 07:28:06 psavola Exp $
+
+19/06/2009	Fixes and enhancements from Michael Stapelberg.  Use
+		getifaddrs() on BSD because ioctl didn't work on NetBSD 5.
+		Use int instead of bool to make NetBSD 5 happy.
 
 21/01/2009	Add a workaround for Linux in scenarios where libc is
 		providing IPV6_RECV(PKTINFO|HOPLIMIT) has renumbered IPV6_PKTINFO,
